--- a/temalabor_drkeseruklaudia/src/Pages/IntroSection/IntroSection.css
+++ b/temalabor_drkeseruklaudia/src/Pages/IntroSection/IntroSection.css
@@ -3,7 +3,7 @@
     background-image: url('../../Pictures/klau_sit.JPG');
     background-position: top;
     width:100%;
-    height: 700px;
+    height: 100vh;
     background-size:cover;
     color: #fff;
     font-size:50px;
