--- a/temalabor_drkeseruklaudia/src/Pages/CVSection/CVSection.css
+++ b/temalabor_drkeseruklaudia/src/Pages/CVSection/CVSection.css
@@ -1,18 +1,18 @@
 #CV{
-    background: #885739;
-    background: -moz-linear-gradient(top,  #885739 0%, #7db9e8 100%);
-    background: -webkit-linear-gradient(top,  #885739 0%,#7db9e8 100%);
-    background: linear-gradient(to bottom,  #885739 0%,#7db9e8 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#885739', endColorstr='#7db9e8',GradientType=0 );       
+    background: #c6a063;
+    background: -moz-linear-gradient(top,  #c6a063 0%, #c1b19b 100%);
+    background: -webkit-linear-gradient(top,  #c6a063 0%,#c1b19b 100%);
+    background: linear-gradient(to bottom,  #c6a063 0%,#c1b19b 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c6a063', endColorstr='#c1b19b',GradientType=0 ); 
 }
 
 .CVHeader{
     font-size: 60px;
     text-align: center;
-    color: white;
     height: max-content;
     padding-top: 10px;
     padding-bottom: 10px;
+    color:white;
 }
 
 .imgNotWorking{
