--- a/temalabor_drkeseruklaudia/src/Pages/HIWSection/HIW.css
+++ b/temalabor_drkeseruklaudia/src/Pages/HIWSection/HIW.css
@@ -1,9 +1,9 @@
 #HIW{
-    background: #7db9e8;
-    background: -moz-linear-gradient(top,  #7db9e8 0%, #b5bdc8 100%);
-    background: -webkit-linear-gradient(top,  #7db9e8 0%,#b5bdc8 100%);
-    background: linear-gradient(to bottom,  #7db9e8 0%,#b5bdc8 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#b5bdc8',GradientType=0 );
+    background: #c1b19b;
+    background: -moz-linear-gradient(top,  #c1b19b 0%, #c6a063 100%);
+    background: -webkit-linear-gradient(top,  #c1b19b 0%,#c6a063 100%);
+    background: linear-gradient(to bottom,  #c1b19b 0%,#c6a063 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c1b19b', endColorstr='#c6a063',GradientType=0 );    
 }
 
 #title{
