--- a/temalabor_drkeseruklaudia/src/Pages/CVSection/CVSection.css
+++ b/temalabor_drkeseruklaudia/src/Pages/CVSection/CVSection.css
@@ -1,9 +1,9 @@
 #CV{
-    background: #c6a063;
-    background: -moz-linear-gradient(top,  #c6a063 0%, #c1b19b 100%);
-    background: -webkit-linear-gradient(top,  #c6a063 0%,#c1b19b 100%);
-    background: linear-gradient(to bottom,  #c6a063 0%,#c1b19b 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c6a063', endColorstr='#c1b19b',GradientType=0 ); 
+    background: rgb(255,255,255);
+    background: -moz-linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(230,184,157,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(230,184,157,1) 100%);
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(230,184,157,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#e6b89d",GradientType=1);  
 }
 
 .CVHeader{
@@ -12,7 +12,7 @@
     height: max-content;
     padding-top: 10px;
     padding-bottom: 10px;
-    color:white;
+    color:black;
 }
 
 .imgNotWorking{
@@ -32,7 +32,7 @@
     width:50%;
     margin-right: auto;
     font-size: 1.4vw;
-    color: white;
+    color: black;
     padding-right: 5px;
     padding-top: 5px;
     padding-bottom: 15px;
