--- a/temalabor_drkeseruklaudia/src/Pages/ContactSection/ContactSection.css
+++ b/temalabor_drkeseruklaudia/src/Pages/ContactSection/ContactSection.css
@@ -1,9 +1,9 @@
 #Contact{
-    background: #28343b;
-    background: -moz-linear-gradient(top,  #28343b 1%, #c6af6d 10%, #c6af6d 89%, #6689dd 97%);
-    background: -webkit-linear-gradient(top,  #28343b 1%,#c6af6d 10%,#c6af6d 89%,#6689dd 97%);
-    background: linear-gradient(to bottom,  #28343b 1%,#c6af6d 10%,#c6af6d 89%,#6689dd 97%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#28343b', endColorstr='#6689dd',GradientType=0 );
+    background: rgb(255,255,255);
+    background: -moz-linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(230,184,157,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(230,184,157,1) 100%);
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(230,184,157,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#e6b89d",GradientType=1);      
     
     padding-top: 70px;
     padding-bottom: 70px;
