--- a/temalabor_drkeseruklaudia/src/Pages/HIWSection/HIW.css
+++ b/temalabor_drkeseruklaudia/src/Pages/HIWSection/HIW.css
@@ -1,20 +1,19 @@
 #HIW{
-    background: #c1b19b;
-    background: -moz-linear-gradient(top,  #c1b19b 0%, #c6a063 100%);
-    background: -webkit-linear-gradient(top,  #c1b19b 0%,#c6a063 100%);
-    background: linear-gradient(to bottom,  #c1b19b 0%,#c6a063 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c1b19b', endColorstr='#c6a063',GradientType=0 );    
+    background: rgb(255,255,255);
+    background: -moz-linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(230,184,157,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(230,184,157,1) 100%);
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(230,184,157,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#e6b89d",GradientType=1);      
 }
 
 #title{
     text-align: center;
     font-size: 3.5vw;
-    color: #fff;
+    color: black;
     padding-bottom: 30px;
 }
 
 #flowchartDesktop{
-    background-color: darkmagenta;
     display: grid;
     grid-template-columns: 45% 10% 45%;
 }
