--- a/temalabor_drkeseruklaudia/src/Pages/ImpSection/ImpSec.css
+++ b/temalabor_drkeseruklaudia/src/Pages/ImpSection/ImpSec.css
@@ -2,11 +2,11 @@
     padding: 20px;
     padding-left: 40px;
     padding-right: 40px;
-    color: white;
-    background: #6689dd;
-    background: -moz-linear-gradient(top,  #6689dd 0%, #0082e5 100%);
-    background: -webkit-linear-gradient(top,  #6689dd 0%,#0082e5 100%);
-    background: linear-gradient(to bottom,  #6689dd 0%,#0082e5 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6689dd', endColorstr='#0082e5',GradientType=0 );
+    color: black;
+    background: rgb(230,184,157);
+    background: -moz-linear-gradient(180deg, rgba(230,184,157,1) 0%, rgba(240,207,187,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(230,184,157,1) 0%, rgba(240,207,187,1) 100%);
+    background: linear-gradient(180deg, rgba(230,184,157,1) 0%, rgba(240,207,187,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e6b89d",endColorstr="#f0cfbb",GradientType=1); 
 
 }
