--- a/temalabor_drkeseruklaudia/src/Pages/Price/PriceSection.css
+++ b/temalabor_drkeseruklaudia/src/Pages/Price/PriceSection.css
@@ -1,9 +1,9 @@
 #Price{
-    background: #b5bdc8;
-    background: -moz-linear-gradient(top,  #b5bdc8 0%, #828c95 36%, #28343b 100%);
-    background: -webkit-linear-gradient(top,  #b5bdc8 0%,#828c95 36%,#28343b 100%);
-    background: linear-gradient(to bottom,  #b5bdc8 0%,#828c95 36%,#28343b 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#28343b',GradientType=0 );    
+    background: rgb(230,184,157);
+    background: -moz-linear-gradient(180deg, rgba(230,184,157,1) 0%, rgba(255,255,255,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(230,184,157,1) 0%, rgba(255,255,255,1) 100%);
+    background: linear-gradient(180deg, rgba(230,184,157,1) 0%, rgba(255,255,255,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e6b89d",endColorstr="#ffffff",GradientType=1);    
 
     padding-top: 2%;
     padding-bottom: 2%;
