--- a/temalabor_drkeseruklaudia/src/Pages/ServicesSection/ServicesSection.css
+++ b/temalabor_drkeseruklaudia/src/Pages/ServicesSection/ServicesSection.css
@@ -1,27 +1,22 @@
 .ServicesHeader{
-    padding-left: auto;
-    padding-right: auto;
-    padding-top: 30px;
-    padding-bottom: 30px;
     text-align: center;
-    font-size: 5vw;
+    font-size: 3.5vw;
     color: black;
-    font-weight: bold;
-    font-family: Georgia, Serif;
+    padding-bottom: 30px;
 }
 
 #Services{
-    background: #7db9e8;
-    background: -moz-linear-gradient(top,  #7db9e8 0%, #7ddae7 100%);
-    background: -webkit-linear-gradient(top,  #7db9e8 0%,#7ddae7 100%);
-    background: linear-gradient(to bottom,  #7db9e8 0%,#7ddae7 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#7ddae7',GradientType=0 );
+    background: rgb(230,184,157);
+    background: -moz-linear-gradient(180deg, rgba(230,184,157,1) 0%, rgba(255,255,255,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(230,184,157,1) 0%, rgba(255,255,255,1) 100%);
+    background: linear-gradient(180deg, rgba(230,184,157,1) 0%, rgba(255,255,255,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e6b89d",endColorstr="#ffffff",GradientType=1); 
 }
 
 #ServicesGrid{
     display: grid;
-    grid-template-columns: repeat(2,auto);
-    grid-template-rows: repeat(4, auto);
+    grid-template-columns: repeat(1,auto);
+    grid-template-rows: repeat(8, auto);
     grid-gap: 5px;
     text-align: left;
     font-size: 1.3vw;
@@ -30,7 +25,6 @@
 }
 
 .elementTitle{
-    font-family: Georgia, Serif;
     font-size: 1.7vw;
     font-weight: bold;
     font-style: italic;
@@ -39,7 +33,7 @@
 .card{
     border: 1px solid black;
     border-radius: 30px;
-    background-color: darksalmon;
+    background-color: #e6b89d;
     padding: 30px;
     margin-right: 30px;
     margin-bottom: 30px;
