--- a/temalabor_drkeseruklaudia/src/Pages/ContactSection/ContactSection.css
+++ b/temalabor_drkeseruklaudia/src/Pages/ContactSection/ContactSection.css
@@ -9,13 +9,17 @@
     padding-bottom: 70px;
 }
 
+label{
+    display: none;
+}
+
 #formTD{
     width:50%;
     padding: 2px;
     padding-right: 30px;
 }
 
-#formDiv{
+form{
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     border: 1px solid black;
     background: #e6b89d;
