--- a/temalabor_drkeseruklaudia/src/Header/Header.css
+++ b/temalabor_drkeseruklaudia/src/Header/Header.css
@@ -1,23 +1,18 @@
+/*ready*/
+
 #logo{
     display: block;
-    align-self: center;
-    height: 70px;
-    border-radius: 10px;
-    padding: 2px;
+    height: 75px;
+    margin-left: 2rem;
 }
 
 .NavbarItems{
-    opacity: 1;
-    background: transparent;
     height: 85px;
     display:flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
     border-bottom: 1px black solid;
-}
-
-#HeaderBG{
     background: rgb(255,255,255);
     background: -moz-linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(230,184,157,1) 100%);
     background: -webkit-linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(230,184,157,1) 100%);
@@ -29,13 +24,10 @@
 .nav-menu{
     display: grid;
     grid-template-columns: repeat(7,auto);
-    grid-gap: 5px;
     list-style: none;
-    /*55:56*/
-    text-align: center;
-    width: 70vw;
+    width: 100vw;
     justify-content: end;
-    margin-right: 2rem;
+    margin-right: 1rem;
 }
 
 .nav-links{
@@ -44,24 +36,6 @@
     padding: 0.5rem 1rem;
 }
 
-#routeLink{
-    color: white;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-}
-
-#routeLink:hover{
-    background: rgb(255,255,255);
-    background: -moz-linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(128,128,128,0.49631190366771705) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(128,128,128,0.49631190366771705) 100%);
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(128,128,128,0.49631190366771705) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#808080",GradientType=1); 
-    color: black;
-    border-radius: 4px;
-    transition: all 0.2s ease-out;
-}
-
-/*glass like hover on social media icons*/
 .nav-links:hover{
     background: rgb(255,255,255);
     color: black;
@@ -69,85 +43,43 @@
     transition: all 0.2s ease-out;
 }
 
-.fa-bars{
-    color:#fff;
+.lang-btn{
+    margin: 0 1rem;
 }
 
 .menu-icon{
     display: none;
 }
 
-.nav-btn{
-    text-align: center;
-    justify-content: center;
-    display: table;
-    vertical-align: middle;
-    border-radius: 4px;
-    margin-left: 5px;
-}
+@media screen and (max-width: 1025px){
 
-.nav-btn:hover{
-    text-align: center;
-    justify-content: center;
-    display: table;
-    vertical-align: middle;
-    border-radius: 4px;
-    margin-left: 5px;
-    opacity: 0.6;
-    transition: all 0.2s ease-out;
-}
-
-#ger{
-    margin-left: 20px;
-}
-
-@media screen and (max-width: 960px){
-
-    
-    #ger{
-        margin-left: 5px;
+    .lang-div{
+        padding: 2rem 0;
+        width: 100%;
+        display: flex;
+        justify-content: center;
     }
 
-    .nav-btn{
-        text-align: center;
-        padding: 2rem;
-        padding-left: 46%;
-        padding-right: 46%;
-        display: table;
-        vertical-align: middle;
-        background-color: transparent;
+    .lang-btn{
+        margin: 0;
     }
 
-    .nav-btn:hover{
-        text-align: center;
-        padding: 2rem;
-        padding-left: 46%;
-        padding-right: 46%;
-        display: table;
-        vertical-align: middle;
+    .lang-div:hover{
         background:white;
-        opacity: 1;
     }
 
     .menu-icon{
         display: flex;
-        color: black;
-    }
-
-    .NavbarItems{
-        position: relative;
     }
 
     .nav-menu{
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 700px;
+        height: calc(100vh-75px);
         position: absolute;
-        top: 65px;
+        top: 66px;
         left:-130%;
-        opacity: 1;
-        transition: all 0.5s ease;
     }
 
     .nav-menu.active{
@@ -157,19 +89,13 @@
         background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(230,184,157,0.9) 100%);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#e6b89d",GradientType=1); 
         left: -40px;
-        opacity: 1;
         transition: all 0.5s ease;
-        z-index: 1;
     }
 
     .nav-links{
-        text-align: center;
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-        width: 96.5%;
-        display: table;
-        vertical-align: middle;
-        background:transparent;
+        padding: 2rem 0;
+        justify-content: center;
+        display: flex;
     }
 
     .nav-links:hover{
@@ -178,11 +104,8 @@
         color: black;
     }
 
-    .Navbar-logo{
-        position: absolute;
-        top:0;
-        left:0;
-        transform: translate(20%,-30%);
+    .NavbarItems{
+        justify-content:space-between;
     }
 
     .menu-icon{
@@ -193,10 +116,5 @@
         transform: translate(-100%, 60%);
         font-size: 1.8rem;
         cursor: pointer;
-    }
-
-    .fa-times{
-        color: #fff;
-        font-size: 2rem;
     }
 }
