--- a/temalabor_drkeseruklaudia/src/Components/Contact/Contact.css
+++ b/temalabor_drkeseruklaudia/src/Components/Contact/Contact.css
@@ -1,4 +1,4 @@
-/*should be ready, but need to refactor the .js next to it*/
+/*ready ???*/
 
 #Contact{
     background: rgb(255,255,255);
@@ -6,40 +6,41 @@
     background: -webkit-linear-gradient(180deg, rgba(222,207,198,1) 0%, rgba(230,184,157,1) 100%);
     background: linear-gradient(180deg, rgba(222,207,198,1) 0%, rgba(230,184,157,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#decfc6",endColorstr="#e6b89d",GradientType=1);      
-    padding: 70px 0;
+    display: flex;
+    justify-content: space-around;
 }
 
-#formTD{
-    width:50%;
-    padding: 2px;
-    padding-right: 30px;
-}
 
 form{
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     border: 1px solid black;
     background: #e6b89d;
-    padding: 40px;
+    padding: 5%;
     border-radius: 15px;
-    padding-right: 90px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    width: 40%;
+    margin: 0 5%;
+    height: 70%;
+    align-self: center;
 }
 
-#ContactTD{
-    padding: 40px;
+#ContactDetails{
+    padding: 0 5%;
     width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+#map{
+    width: 100%;
+    height: 300px;
 }
 
 .ContactText{
-    font-size: larger;
+    font-size: 20px;
     color: black;
     padding: 5px 0;
-}
-
-#ContactTable{
-    width: 100%;
 }
 
 #ContactTitle{
@@ -58,26 +59,25 @@ form{
     font-size: 30px;
     padding-bottom: 10px;
     font-weight: bold;
-    padding-left: 35px;
 }
 
-.input{
-    margin: 15px;
-    width: 100%;
+input{
     font-size: 15px;
     padding:8px;
+    margin: 2% 0;
 }
 
-#description{
+textarea{
+    font-size: 15px;
+    padding:8px;
+    margin: 2% 0;
     height: 70px;
-    padding-top:"2px";
     resize: none;
 }
 
 #button{
-    margin-left: 4%;
-    width: 100%;
-    padding: 5px;
+    padding: 8px;
+    margin: 2% 0;
     background-color: #e4a885;
     transition: ease-out 0.3s;
     border-radius: 6px;
@@ -89,45 +89,50 @@ form{
     transition: ease-out 0.3s;
 }
 
-#btn-pos{
-    /*shouldnt exist*/
-    width: 100%;
-}
-
-#formDivMobile{
-    display:none;
-}
-
 @media screen and (max-width: 900px){
-    #formTD{
-        display:none;
+    #Contact{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: repeat(2, auto);
+        justify-content:center;
     }
 
-    #formDivMobile{
-        display:block;
-        background: #e6b89d;
-        padding: 40px;
-        border-radius: 15px;
-        padding-right: 90px;
+    form{
+        margin: 0;
+        margin-top: 5%;
+        width: 80vw;
+        height: 90%;
+        padding: 4%;
+    }
+
+    #ContactDetails{
+        width: 100%;
+    }
+
+    #ContactTitle{
+        text-align: center;
+    }
+
+    .ContactSubTitle{
+        font-size: calc(100vw/20);
+    }
+
+    .ContactText{
+        font-size: calc(100vw/22);
+    }
+
+    #map{
+        width: 80%;
     }
 }
 
-#SocialMedia{
-    display: inline-flex;
-    width: 100%;
-}
-
-#SocialMedia a{
+.ContactText a{
     text-decoration:none;
-    padding: 5px;
+    margin: 5px;
     border-radius: 5px;
 }
 
-#SocialMedia a:hover{
-    text-decoration:none;
-    overflow: hidden;
-    padding: 5px;
-    border-radius: 5px;
-    box-shadow: 0 5px 5px rgba(0,0,0,.6);
-    transition: 0.5s;
+.ContactText a:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    transition: ease-out 0.3s;
 }
