--- a/temalabor_drkeseruklaudia/src/App.css
+++ b/temalabor_drkeseruklaudia/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Arial, sans-serif;
   box-sizing: border-box;
   margin:0;
   padding:0;
