--- a/temalabor_drkeseruklaudia/src/Components/Price/PriceSection.css
+++ b/temalabor_drkeseruklaudia/src/Components/Price/PriceSection.css
@@ -37,6 +37,11 @@
 }
 
 @media screen and (max-width: 1400px){
+
+    #PriceTitle{
+        font-size: 35px;
+    }
+
     #PriceText{
         text-align: justify;
         font-size:16px;
