--- a/temalabor_drkeseruklaudia/src/Components/ServicesSection/ServicesSection.css
+++ b/temalabor_drkeseruklaudia/src/Components/ServicesSection/ServicesSection.css
@@ -5,7 +5,7 @@
     padding-bottom: 30px;
 }
 
-#Services{
+#areasOfExpertise{
     background: rgb(230,184,157);
     background: -moz-linear-gradient(180deg, rgba(230,184,157,1) 0%, rgba(255,255,255,1) 100%);
     background: -webkit-linear-gradient(180deg, rgba(230,184,157,1) 0%, rgba(255,255,255,1) 100%);
